--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
     const speed = document.querySelector('.speed-value');
 
     navigator.geolocation.watchPosition((data) => {
-      console.log(data)
+      console.log(data);
       speed.textContent = data.coords.speed;
-      arrow.style.transform = `rotate(${data.coords.heading} deg)`;
+      arrow.style.transform = `rotate(${data.coords.heading}deg)`;
     }, (err) => {
       console.error(err);
     });
-
   </script>
 </body>
 </html>
